# TFG_COLA2_CORE

cola2_control/: CMakeLists.txt  package.xml
cola2_control/src/: captain_node.cpp  controller_node.cpp  pilot_node.cpp
cola2_control/src/cola2_control/ros_controller/: auv_ros_controller.cpp
cola2_lib_ros/: .gitignore  CMakeLists.txt
cola2_lib_ros/include/cola2_lib_ros/: serviceclient_helper.h
cola2_lib_ros/src/cola2_lib_ros/: captain_helper.cpp  diagnostic_helper.cpp  navigation_helper.cpp  setpoints_selector.cpp  this_node.cpp  transform_handler.cpp  types.cpp
cola2_msgs/: CMakeLists.txt
cola2_nav/: CMakeLists.txt  package.xml
cola2_nav/config/: navigator.yaml  navigator_position.yaml
cola2_nav/include/cola2_nav/: ekf_base_ros.h  ekf_position.h  ekf_position_velocity.h  ekf_surface_2d.h
cola2_nav/launch/: navigation.launch.py  navigation2D.launch.py
cola2_nav/src/: navigator_node.cpp  navigator_position_node.cpp  navigator_surface_node.cpp
cola2_nav/src/cola2_nav/: ekf_base_ros.cpp  ekf_position.cpp  ekf_position_velocity.cpp  ekf_surface_2d.cpp
imu/: .gitignore  CMakeLists.txt  package.xml
imu/calibrations/: adis_imu_last_calibration.yaml
imu/config/: adis_imu.yaml  imu_angle_estimator.yaml
imu/launch/: adis_imu.launch  adis_imu_launch.py
imu/src/: adis_imu_node.cpp
keyboard/: CMakeLists.txt  package.xml
keyboard/src/: keyboard_node.cpp
linkquest_navquest600_dvl/: CMakeLists.txt  package.xml
linkquest_navquest600_dvl/config/: linkquest_navquest600_dvl.yaml
linkquest_navquest600_dvl/include/linkquest_navquest600_dvl/: navquest600.h
linkquest_navquest600_dvl/launch/: linkquest_navquest600_dvl_launch.py
linkquest_navquest600_dvl/src/: linkquest_navquest600_dvl_node.cpp
linkquest_navquest600_dvl/src/linkquest_navquest600_dvl/: navquest600.cpp
nmea_gps/: .gitignore  CMakeLists.txt  package.xml
nmea_gps/config/: nmea_gps.yaml
nmea_gps/include/nmea_gps/: nmea_gps.h
nmea_gps/launch/: nmea_gps.launch  nmea_gps_launch.py
nmea_gps/src/: nmea_gps_node.cpp
stm32/: CMakeLists.txt  package.xml
stm32/include/stm32/: stm32.h
stm32/launch/: stm32_launch.py
stm32/src/: stm32_node.cpp
stm32/src/stm32/: stm32.cpp
