<?xml version="1.0"?>
<package format="3">
  <name>adis_imu</name>
  <version>20.10.2</version>
  <description>The adis_imu package</description>
  <maintainer email="software@iquarobotics.com">Iqua Robotics</maintainer>
  <license>Iqua Robotics</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS Dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>message_generation</depend>

  <!-- COLA2 Dependencies -->
  <depend>cola2_lib</depend>
  <depend>cola2_msgs</depend>
  <depend>cola2_lib_ros</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <rosidl_default_runtime export="true"/>
  </export>

</package>

