<?xml version="1.0"?>
<package format="3">
  <name>linkquest_navquest600_dvl</name>
  <version>20.10.1</version>
  <description>Linkquest_navquest600_dvl package</description>
  <maintainer email="software@iquarobotics.com">Iqua Robotics</maintainer>
  <license>Iqua Robotics</license>

	 <buildtool_depend>ament_cmake</buildtool_depend>

	  <!-- ROS Dependencies -->
	  <depend>rclcpp</depend>
	  <depend>sensor_msgs</depend>
	  <depend>std_msgs</depend>
	  <depend>cola2_lib_ros</depend>
          <depend>cola2_msgs</depend>
          <depend>cola2_lib</depend>


	  <test_depend>ament_lint_auto</test_depend>
	  <test_depend>ament_lint_common</test_depend>
	  
	  <member_of_group>rosidl_interface_packages</member_of_group>
	  
	  
	  <!-- Specify message generation -->
	  <export>
	    <build_type>ament_cmake</build_type>
	    <rosidl_default_runtime export="true"/>
	  </export>
</package>
